--- a/HellowWorldButton/Components/Pages/Home.razor
+++ b/HellowWorldButton/Components/Pages/Home.razor
@@ -1,7 +1,17 @@
 ﻿@page "/"
+@inject HttpClient Http
 
-<PageTitle>Home</PageTitle>
+<h3>Get Data from Server</h3>
 
-<h1>Hello, world!</h1>
+<button @onclick="GetData">Click Me</button>
 
-Welcome to your new app.
+<p>@message</p>
+
+@code {
+    private string message = "";
+
+    private async Task GetData()
+    {
+        message = await Http.GetStringAsync("/api/hello");
+    }
+}
